// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field snapshot tests base snapshot 1`] = `
<div>
  <div
    style="background-color: yellow; width: 500px; height: 500px;"
  >
    Field
  </div>
</div>
`;

exports[`Field snapshot tests some data with sizes snapshot 1`] = `
<div>
  <div
    style="background-color: yellow; width: 300px; height: 500px;"
  >
    <div
      style="white-space: nowrap;"
    >
      <div
        style="display: inline-block;"
      >
        <div
          id="1"
          style="background-color: pink; width: 73px; height: 123px; border: 1px solid black;"
        >
          <div
            style="text-align: center; position: relative; top: 30%;"
          >
            click me
          </div>
        </div>
      </div>
      <div
        style="display: inline-block;"
      >
        <div
          id="2"
          style="background-color: pink; width: 73px; height: 123px; border: 1px solid black;"
        >
          <div
            style="text-align: center; position: relative; top: 30%;"
          >
            click me
          </div>
        </div>
      </div>
      <div
        style="display: inline-block;"
      >
        <div
          id="3"
          style="background-color: pink; width: 73px; height: 123px; border: 1px solid black;"
        >
          <div
            style="text-align: center; position: relative; top: 30%;"
          >
            click me
          </div>
        </div>
      </div>
      <div
        style="display: inline-block;"
      >
        <div
          id="4"
          style="background-color: pink; width: 73px; height: 123px; border: 1px solid black;"
        >
          <div
            style="text-align: center; position: relative; top: 30%;"
          >
            click me
          </div>
        </div>
      </div>
    </div>
    <div
      style="white-space: nowrap;"
    >
      <div
        style="display: inline-block;"
      >
        <div
          id="5"
          style="background-color: pink; width: 73px; height: 123px; border: 1px solid black;"
        >
          <div
            style="text-align: center; position: relative; top: 30%;"
          >
            click me
          </div>
        </div>
      </div>
      <div
        style="display: inline-block;"
      >
        <div
          id="6"
          style="background-color: pink; width: 73px; height: 123px; border: 1px solid black;"
        >
          <div
            style="text-align: center; position: relative; top: 30%;"
          >
            click me
          </div>
        </div>
      </div>
      <div
        style="display: inline-block;"
      >
        <div
          id="7"
          style="background-color: pink; width: 73px; height: 123px; border: 1px solid black;"
        >
          <div
            style="text-align: center; position: relative; top: 30%;"
          >
            click me
          </div>
        </div>
      </div>
      <div
        style="display: inline-block;"
      >
        <div
          id="8"
          style="background-color: pink; width: 73px; height: 123px; border: 1px solid black;"
        >
          <div
            style="text-align: center; position: relative; top: 30%;"
          >
            click me
          </div>
        </div>
      </div>
    </div>
    <div
      style="white-space: nowrap;"
    >
      <div
        style="display: inline-block;"
      >
        <div
          id="9"
          style="background-color: pink; width: 73px; height: 123px; border: 1px solid black;"
        >
          <div
            style="text-align: center; position: relative; top: 30%;"
          >
            click me
          </div>
        </div>
      </div>
      <div
        style="display: inline-block;"
      >
        <div
          id="10"
          style="background-color: pink; width: 73px; height: 123px; border: 1px solid black;"
        >
          <div
            style="text-align: center; position: relative; top: 30%;"
          >
            click me
          </div>
        </div>
      </div>
      <div
        style="display: inline-block;"
      >
        <div
          id="11"
          style="background-color: pink; width: 73px; height: 123px; border: 1px solid black;"
        >
          <div
            style="text-align: center; position: relative; top: 30%;"
          >
            click me
          </div>
        </div>
      </div>
      <div
        style="display: inline-block;"
      >
        <div
          id="12"
          style="background-color: pink; width: 73px; height: 123px; border: 1px solid black;"
        >
          <div
            style="text-align: center; position: relative; top: 30%;"
          >
            click me
          </div>
        </div>
      </div>
    </div>
    <div
      style="white-space: nowrap;"
    />
  </div>
</div>
`;

exports[`Field snapshot tests with cells snapshot 1`] = `
<div>
  <div
    style="background-color: yellow; width: 500px; height: 500px;"
  >
    <div
      style="white-space: nowrap;"
    >
      <div
        style="display: inline-block;"
      >
        <div
          id="1"
          style="background-color: pink; width: 123px; height: 123px; border: 1px solid black;"
        >
          <div
            style="text-align: center; position: relative; top: 30%;"
          >
            click me
          </div>
        </div>
      </div>
      <div
        style="display: inline-block;"
      >
        <div
          id="2"
          style="background-color: pink; width: 123px; height: 123px; border: 1px solid black;"
        >
          <div
            style="text-align: center; position: relative; top: 30%;"
          >
            click me
          </div>
        </div>
      </div>
      <div
        style="display: inline-block;"
      >
        <div
          id="3"
          style="background-color: pink; width: 123px; height: 123px; border: 1px solid black;"
        >
          <div
            style="text-align: center; position: relative; top: 30%;"
          >
            click me
          </div>
        </div>
      </div>
      <div
        style="display: inline-block;"
      >
        <div
          id="4"
          style="background-color: pink; width: 123px; height: 123px; border: 1px solid black;"
        >
          <div
            style="text-align: center; position: relative; top: 30%;"
          >
            click me
          </div>
        </div>
      </div>
    </div>
    <div
      style="white-space: nowrap;"
    >
      <div
        style="display: inline-block;"
      >
        <div
          id="5"
          style="background-color: pink; width: 123px; height: 123px; border: 1px solid black;"
        >
          <div
            style="text-align: center; position: relative; top: 30%;"
          >
            click me
          </div>
        </div>
      </div>
      <div
        style="display: inline-block;"
      >
        <div
          id="6"
          style="background-color: pink; width: 123px; height: 123px; border: 1px solid black;"
        >
          <div
            style="text-align: center; position: relative; top: 30%;"
          >
            click me
          </div>
        </div>
      </div>
      <div
        style="display: inline-block;"
      >
        <div
          id="7"
          style="background-color: pink; width: 123px; height: 123px; border: 1px solid black;"
        >
          <div
            style="text-align: center; position: relative; top: 30%;"
          >
            click me
          </div>
        </div>
      </div>
      <div
        style="display: inline-block;"
      >
        <div
          id="8"
          style="background-color: pink; width: 123px; height: 123px; border: 1px solid black;"
        >
          <div
            style="text-align: center; position: relative; top: 30%;"
          >
            click me
          </div>
        </div>
      </div>
    </div>
    <div
      style="white-space: nowrap;"
    >
      <div
        style="display: inline-block;"
      >
        <div
          id="9"
          style="background-color: pink; width: 123px; height: 123px; border: 1px solid black;"
        >
          <div
            style="text-align: center; position: relative; top: 30%;"
          >
            click me
          </div>
        </div>
      </div>
      <div
        style="display: inline-block;"
      >
        <div
          id="10"
          style="background-color: pink; width: 123px; height: 123px; border: 1px solid black;"
        >
          <div
            style="text-align: center; position: relative; top: 30%;"
          >
            click me
          </div>
        </div>
      </div>
      <div
        style="display: inline-block;"
      >
        <div
          id="11"
          style="background-color: pink; width: 123px; height: 123px; border: 1px solid black;"
        >
          <div
            style="text-align: center; position: relative; top: 30%;"
          >
            click me
          </div>
        </div>
      </div>
      <div
        style="display: inline-block;"
      >
        <div
          id="12"
          style="background-color: pink; width: 123px; height: 123px; border: 1px solid black;"
        >
          <div
            style="text-align: center; position: relative; top: 30%;"
          >
            click me
          </div>
        </div>
      </div>
    </div>
    <div
      style="white-space: nowrap;"
    />
  </div>
</div>
`;
